# NEWT0

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README.en  README.ja  README.txt  configure  configure.in  configure_ipod  index.html
.github/workflows/: ci.yml
COPYING/: COPYING.ja.txt  COPYING.txt  LEGAL.txt
contrib/NativeCalls/: Makefile  Makefile.in  NativeCalls.c  README  native.newt
contrib/NativeCalls/libffi-ios/ffi/: ffi-iphonesimulator.h  ffi.h  ffitarget.h  raw_api.c
contrib/NativeCalls/libffi-osx/include/: ffi.h  fficonfig.h
contrib/NativeCalls/tests/: test_nativecalls.newt
contrib/NewtObjC/: .gdb_history  AppKitFunctions.h  AppKitFunctions.m  Constants.h  FoundationFunctions.h  FoundationFunctions.m  Makefile  Makefile.in  NewtObjC.m  ObjCObjects.h  ObjCObjects.m  README  TNewtObjCRef.h  TNewtObjCRef.m  Utils.h  Utils.m
contrib/NewtObjC/example/: objc.newt
contrib/NewtObjC/example/NEWT0CurrencyConverter/: Info.plist  NEWT0AppRuntime.sh  NEWT0CurrencyConverter.newt
contrib/NewtObjC/example/NEWT0CurrencyConverter/English.lproj/: InfoPlist.strings
contrib/NewtObjC/example/NEWT0CurrencyConverter/English.lproj/MainMenu.nib/: classes.nib  designable.nib  info.nib  keyedobjects.nib
contrib/NewtObjC/example/NEWT0CurrencyConverter/MainMenu.nib/: info.nib  keyedobjects.nib
contrib/NewtObjC/example/NEWT0CurrencyConverter/NEWT0CurrencyConverter.xcodeproj/: paul.mode1  paul.pbxuser  project.pbxproj
contrib/NewtObjC/objc-runtime-x/: Makefile  README  objc-runtime-x-i386.s  objc-runtime-x-ppc.s  objc-runtime-x.h  objc-runtime-x.s
contrib/NewtObjC/tests/: test_newtobjc.newt
contrib/contrib.xcodeproj/: default.pbxuser  project.pbxproj
contrib/inwt/: Makefile  Makefile.in  README  inwt.nwt
documents/: 01_howto.txt  02_difference.txt  03_problem.txt  04_library.txt  05_implement.txt  en.01_howto.txt  en.02_difference.txt  en.03_problem.txt  en.04_library.txt  en.05_implement.txt
ext.xcode/: gnue.mode1  gnue.pbxuser  project.pbxproj
ext.xcodeproj/: gnue.mode1  gnue.pbxuser  project.pbxproj
ext/ext.xcodeproj/: default.pbxuser  project.pbxproj
ext/protoFILE/: Makefile  Makefile.in  protoFILE.c
ext/protoREGEX/: Makefile  Makefile.in  protoREGEX.c
iNewt/iNewt/: iNewt-Prefix.pch  iNewt.c  iNewt.h
iNewt/iNewt.xcodeproj/: project.pbxproj
iNewt/iNewtExample/: NWAppDelegate.h  NWAppDelegate.m  NWViewController.h  NWViewController.m  iNewt.newt  iNewtExample-Info.plist  iNewtExample-Prefix.pch  main.m
iNewt/iNewtExample.xcodeproj/: project.pbxproj
iNewt/iNewtExample/en.lproj/: NWViewController_iPad.xib  NWViewController_iPhone.xib
iNewt/iNewtExample/iNewtExample/: NWViewController.m
iNewt/iNewtExample/iNewtExample.xcodeproj/: project.pbxproj
ja/: Difference.html  KnownProblem.html  Usage.html  XcodeSupport.html  index.html
misc/: Doxyfile  Doxyfile.en  doxygen.conf  dumpFn  my-header.html
misc/xcode-support/: newt.pbfilespec  newt.pblangspec
newt.xcode/: gnue.mode1  gnue.pbxuser  project.pbxproj
newt.xcode/CVS/: Entries  Repository  Root
newt.xcodeproj/: gnue.mode1  gnue.pbxuser  project.pbxproj
newt_all.xcodeproj/: project.pbxproj
platform/: BeOS  CYGWIN_NT-5.1  Darwin  FreeBSD  Linux  MINGW32_NT-5.1
platform/VisualC6/: newt_app.dsp  newt_lib.dsp  newt_lib.vcproj
sample/: apply.newt  basicFns.newt  cat.newt  easter.newt  egg.newt  exception.newt  fib.newt  iPodKeyTest.sh  inherit.newt  nsof.newt  perform.newt  regex.newt  test_all.newt
src/: config.h.in  main.c  version.h
src/newt.xcodeproj/: default.pbxuser  project.pbxproj
src/newt_core/: NewtBC.c  NewtEnv.c  NewtFile.c  NewtFns.c  NewtGC.c  NewtIO.c  NewtIconv.c  NewtMem.c  NewtNSOF.c  NewtObj.c  NewtParser.c  NewtPkg.c  NewtPrint.c  NewtStr.c  NewtVM.c
src/newt_core/incs/: NewtBC.h  NewtConf.h  NewtConf.h.in  NewtCore.h  NewtEnv.h  NewtErrs.h  NewtFile.h  NewtFns.h  NewtGC.h  NewtIO.h  NewtIconv.h  NewtLib.h  NewtMem.h  NewtNSOF.h  NewtObj.h  NewtParser.h  NewtPkg.h  NewtPrint.h  NewtStr.h  NewtType.h  NewtVM.h  platform.h
src/newt_core/incs/Newton/: Newton.h  NewtonExceptions.h  NewtonMemory.h  Objects.h
src/newt_core/incs/VC6/: NewtConf.h  config.h  dlfcn.h  endian.h  iconv.h  stdbool.h  stdint.h  unistd.h
src/newt_core/incs/darwin/: config.h
src/newt_core/incs/win/: dlfcn.h
src/parser/: lookup_words.c  lookup_words.h  newt.l  newt.y  yacc.h
src/utils/: endian_utils.c  endian_utils.h
tests/: test_arithmetic.newt  test_common.newt  test_compile.newt  test_exceptions.newt  test_nsof.newt  test_protoFILE.newt  test_protoREGEX.newt
themes/oreilly/: base.css  style.css
